--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -17,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XhD-A8-CkR">
-                                <rect key="frame" x="20" y="142" width="374" height="574"/>
+                                <rect key="frame" x="20" y="146" width="374" height="570"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rYd-hc-McG">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="282"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="280"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ceq-6v-F5d">
-                                                <rect key="frame" x="0.0" y="0.0" width="182" height="282"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="182" height="280"/>
                                                 <color key="backgroundColor" red="0.73393648860000005" green="0.1505818367" blue="0.12150562550000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Shooter">
@@ -34,7 +34,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dkp-CA-mfM">
-                                                <rect key="frame" x="192" y="0.0" width="182" height="282"/>
+                                                <rect key="frame" x="192" y="0.0" width="182" height="280"/>
                                                 <color key="backgroundColor" red="0.89253032210000005" green="0.65784049030000002" blue="0.71764969830000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Medical">
@@ -47,10 +47,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gth-KZ-YFo">
-                                        <rect key="frame" x="0.0" y="292" width="374" height="282"/>
+                                        <rect key="frame" x="0.0" y="290" width="374" height="280"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2A-t5-a1P">
-                                                <rect key="frame" x="0.0" y="0.0" width="182" height="282"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="182" height="280"/>
                                                 <color key="backgroundColor" red="0.93313711880000005" green="0.50591051580000002" blue="0.19201862810000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Fight">
@@ -61,7 +61,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2S-3X-v0c">
-                                                <rect key="frame" x="192" y="0.0" width="182" height="282"/>
+                                                <rect key="frame" x="192" y="0.0" width="182" height="280"/>
                                                 <color key="backgroundColor" red="0.43529278040000002" green="0.24621292950000001" blue="0.43531119820000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Other">
@@ -76,14 +76,14 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkv-cc-maD">
-                                <rect key="frame" x="10" y="55" width="90" height="30"/>
+                                <rect key="frame" x="10" y="55" width="91.333333333333329" height="30"/>
                                 <color key="backgroundColor" red="0.1983621716" green="0.24874830249999999" blue="0.34903240200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="View Threats">
                                     <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select A Threat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baf-Qm-FV9">
-                                <rect key="frame" x="108" y="86" width="199" height="36"/>
+                                <rect key="frame" x="108.99999999999999" y="90" width="197.66666666666663" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -92,17 +92,17 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XhD-A8-CkR" secondAttribute="trailing" constant="20" id="6pR-hb-dyD"/>
-                            <constraint firstItem="gkv-cc-maD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="7Pf-0D-Ggs"/>
-                            <constraint firstItem="XhD-A8-CkR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="8Mq-tc-6vB"/>
-                            <constraint firstItem="baf-Qm-FV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="108" id="Dws-Y8-lTy"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gkv-cc-maD" secondAttribute="bottom" constant="651" id="OtJ-QR-nuY"/>
-                            <constraint firstItem="baf-Qm-FV9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="42" id="Yk8-SU-ZMs"/>
-                            <constraint firstItem="XhD-A8-CkR" firstAttribute="top" secondItem="baf-Qm-FV9" secondAttribute="bottom" constant="20" id="csE-Bs-Czh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XhD-A8-CkR" secondAttribute="bottom" constant="20" id="ebP-jU-aEZ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="baf-Qm-FV9" secondAttribute="trailing" constant="107" id="jKY-aL-ivp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gkv-cc-maD" secondAttribute="trailing" constant="314" id="kYn-H6-Np8"/>
-                            <constraint firstItem="gkv-cc-maD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="yiS-ll-cnv"/>
+                            <constraint firstItem="XhD-A8-CkR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3mP-ij-xeS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XhD-A8-CkR" secondAttribute="trailing" constant="20" id="86K-Jf-zXV"/>
+                            <constraint firstItem="baf-Qm-FV9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="46" id="9Nj-g2-h43"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="baf-Qm-FV9" secondAttribute="trailing" constant="107.33" id="DLh-i9-1Kl"/>
+                            <constraint firstItem="baf-Qm-FV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="109" id="IAk-Dr-bn5"/>
+                            <constraint firstItem="gkv-cc-maD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="PEl-3E-8M9"/>
+                            <constraint firstItem="XhD-A8-CkR" firstAttribute="top" secondItem="baf-Qm-FV9" secondAttribute="bottom" constant="20" id="ReU-ly-PzC"/>
+                            <constraint firstItem="XhD-A8-CkR" firstAttribute="top" secondItem="gkv-cc-maD" secondAttribute="bottom" constant="61" id="UgW-Aw-tIY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gkv-cc-maD" secondAttribute="trailing" constant="312.67000000000002" id="VKI-1h-gM5"/>
+                            <constraint firstItem="gkv-cc-maD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="ii6-ae-t8M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XhD-A8-CkR" secondAttribute="bottom" constant="20" id="lAB-27-enf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PuG-u5-apW"/>
